# TimerService

./: CMakeLists.txt  README.md  setup_linux.sh  setup_windows.bat
.github/workflows/: cmake-single-platform.yml
example/: CMakeLists.txt  example.cpp
inc/: ThreadPool.h  Timer.h  TimerManager.h
inc/timer/: Timer.h  TimerManager.h
src/: CMakeLists.txt  ThreadPool.cpp  Timer.cpp  TimerManager.cpp
tests/: CMakeLists.txt  TimerServiceTests.cpp
